# Frost

./: .gitignore  CMakeLists.txt  README.md  TASKS.md  TASKS_TEST_RESULTS.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
app-swift/Sources/App/: VisibilityStore.swift  main.swift
bridge-objcxx/include/: FrostBarBridge.h
bridge-objcxx/src/: FrostBarBridge.mm
core-cpp/include/frostbar/: LayoutEngine.hpp  MenuItem.hpp  PolicyEngine.hpp
core-cpp/src/: LayoutEngine.cpp  PolicyEngine.cpp
delete/: FrostBar-0.1.3.dmg  FrostBar-latest-0.1.4.dmg  FrostBar-prev-0.1.6.dmg  FrostBar-prev-0.1.7.dmg  FrostBar-prev-0.1.8.dmg  FrostBar-prev-0.1.9.dmg
docs/: ARCHITECTURE.md
scripts/: bootstrap.sh  build_app.sh  package_and_test.sh  package_dmg.sh
tests/: core_smoke_test.cpp  visibility_store_test.swift
